Fixed hero banner to have more contrast so text is readable

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -23,12 +23,26 @@ body, h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   -webkit-transition: background-image 2s ease-in-out;
   transition: background-image 2s ease-in-out;
+  position: relative;
+}
+
+.background-black{
+  position: absolute;
+  background-color: rgba(0,0,0,05);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .intro-message {
   position: relative;
   padding-top: 20%;
   padding-bottom: 20%;
+  max-width: 60%;
+  display: block;
+  margin: 0 auto;  
 }
 
 .intro-message>h1 {
@@ -45,6 +59,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .intro-message>h3 {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+  font-weight: 300;
 }
 
 .intro-social-buttons i {
@@ -344,6 +359,10 @@ a.spaces-container:hover{
 }
 
 @media screen and (max-width: 767px){
+
+  .intro-message{
+    max-width: 100%;
+  }
 
   .zeal-paragraph{
     padding-left: 20px;
